--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "textbook-digitizer",
   "private": true,
@@ -10,10 +11,12 @@
   },
   "dependencies": {
     "@google/genai": "*",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/jszip": "^3.10.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
